testdata/good/before/reserve-inside-slot/layout.tw
<head>@component('comp')@provide@reserve('title')@end@end</head>